# trade-copilot

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LOOM_SCRIPT.md  README.md  pyproject.toml  writeup.md
data/: README.md  accounts_serve.csv  accounts_train.csv  dim_account.csv  dim_product.csv  eval_questions_partA.md  fact_orders.csv  fact_reimbursements.csv
data/knowledge_base/: KB-01_metric_glossary.md  KB-02_pricing_discount_policy.md  KB-03_reimbursement_programs.md  KB-04_three_tier_compliance.md  KB-05_data_dictionary.md  KB-06_exception_log.md  KB-07_reporting_standards.md
eval/: conftest.py  golden.py  test_part_a.py  test_sql_guard.py
outputs/: at_risk_serve.csv  part_a_results.md  partc_metrics.json
partc/: __init__.py  data.py  model.py  score.py
src/copilot/: __init__.py  api.py  cli.py  config.py  db.py  eval_questions.py  llm.py  offline_fixtures.py  schema_card.py
src/copilot/agent/: __init__.py  graph.py  nodes.py  state.py
src/copilot/kb/: __init__.py  loader.py  retriever.py
src/copilot/sql/: __init__.py  execute.py  generate.py  guard.py
src/copilot/web/: index.html
