[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-copilot"
version = "0.1.0"
description = "Trade Intelligence Copilot — Text-to-SQL + RAG agent and account-retention model for a three-tier beverage distribution platform."
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "sqlglot>=25",
    "anthropic>=0.40",
    "langgraph>=0.2",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[project.scripts]
copilot = "copilot.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["eval"]

[tool.ruff]
line-length = 100
target-version = "py311"
